--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preinstall": "npx -y only-allow pnpm"
+    "preinstall": "npx -y only-allow pnpm",
+    "changeset": "changeset",
+    "ci:publish": "changeset publish",
+    "ci:version": "changeset version"
   },
   "config": {
     "commitizen": {
@@ -77,9 +80,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
+    "@commitlint/cli": "^18.6.0",
     "@types/node": "^20",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18",
+    "@types/upng-js": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "autoprefixer": "^10.0.1",
@@ -89,15 +95,13 @@
     "eslint-config-alloy": "^5.1.2",
     "eslint-plugin-react": "^7.34.1",
     "fast-glob": "^3.3.2",
+    "father": "^4.4.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.0",
-    "@commitlint/cli": "^18.6.0",
-    "@types/upng-js": "^2.1.5",
-    "father": "^4.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
