--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lint:fix": "eslint . --fix",
     "changeset": "changeset",
     "ci:publish": "changeset publish",
-    "ci:version": "changeset version"
+    "ci:version": "changeset version",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "config": {
     "commitizen": {
@@ -84,7 +86,17 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
+    "@chromatic-com/storybook": "1.9.0",
     "@commitlint/cli": "^18.6.0",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/addon-themes": "8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@types/node": "^20",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18",
@@ -97,6 +109,7 @@
     "eslint": "^8.56.0",
     "eslint-config-alloy": "^5.1.2",
     "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "fast-glob": "^3.3.2",
     "father": "^4.4.0",
     "husky": "^9.1.4",
@@ -105,6 +118,7 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storybook": "^8.2.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
